--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "next": "13.5.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.0"
   },
   "devDependencies": {
     "@types/node": "^20",
