--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8.4.31",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
   },
