--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "@tailwindcss/forms": "^0.5.7",
     "next": "13.5.5",
     "react": "^18",
