--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
 TWILIO_SID=ACe104a554db866e14925fd7ae65614bd6
+TWILIO_TOKEN=9268543c3f5c82209148af1f9e9272ea
