--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.0"
+    "react-hook-form": "^7.49.0",
+    "twilio": "^4.20.1"
   },
   "devDependencies": {
     "@types/node": "^20",
