--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/nodemailer": "^6.4.14",
     "next": "13.5.5",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.0",
