--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/nodemailer": "^6.4.14",
+    "iron-session": "^8.0.1",
     "next": "13.5.5",
     "nodemailer": "^6.9.8",
     "react": "^18",
