--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
 TWILIO_SID=ACe104a554db866e14925fd7ae65614bd6
 TWILIO_TOKEN=9268543c3f5c82209148af1f9e9272ea
 TWILIO_MESSAGING_SERVICE_SID=MG68bc919541413737337c9983c7647971
+COOKIE_PASSWORD=an3hzHs1PMlrlCwiM8dMNXPgCpkL83oOv3NKtlJM
