--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.0",
-    "twilio": "^4.20.1"
+    "twilio": "^4.20.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/node": "^20",
